k8s/appointment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: 173763385083.dkr.ecr.ap-south-1.amazonaws.com/appointment-service:latest
          ports:
            - containerPort: 3000
