k8s/appointment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  type: ClusterIP
  selector:
    app: appointment-service
  ports:
    - port: 80
      targetPort: 3000
